--- a/posts.html
+++ b/posts.html
@@ -106,6 +106,14 @@
 
       function updateText(i, newtext) {
         storedLinks[i].text = newtext;
+
+        fetch('http://localhost:8080/api/bookmarks/', {
+          method: 'PUT',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(storedLinks[i])
+        }).then(response => alert(response));
       }
 
       function openShareWindow(link) {
